<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:orientation="vertical"
    android:padding="16dp"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/escolha_seu_produto"
        android:textSize="24sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <CheckBox
        android:id="@+id/checkArroz"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/arroz" />

    <CheckBox
        android:id="@+id/checkLeite"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/leite" />

    <CheckBox
        android:id="@+id/checkCarne"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/carne" />

    <CheckBox
        android:id="@+id/checkFeijao"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/feijao" />

    <CheckBox
        android:id="@+id/checkCoca"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/cocacola" />

    <Button
        android:id="@+id/buttonTotalizar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/totalizacao" />

</LinearLayout>